--- a/package.json
+++ b/package.json
@@ -5,20 +5,28 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx tsc",
-    "start": "node dist/index.js",
-    "dev": "nodemon src/index.ts"
+    "build": "npm install && npx tsc && npm run migrate-latest && npm run seed-data",
+    "start": "node dist/src/index.js",
+    "dev": "nodemon src/index.ts",
+    "lint": "eslint --fix --ext .js .",
+    "migrate-latest": "knex migrate:latest",
+    "migrate-down": "knex migrate:rollback",
+    "seed-data": "knex seed:run"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "knex": "^3.1.0",
+    "pg": "^8.12.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^22.0.0",
+    "concurrently": "^8.2.2",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
