--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ PORT = 3100
 NODE_ENV = 
 DB_HOST = 127.0.0.1
 DB_PORT = 5432
-DB_USER = 
+DB_USER = postgres
 DB_PASSWORD = 
 DB_NAME = todoapp
-ORIGIN = 
+ORIGIN = http://localhost:4173
