--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "pg": "^8.12.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^22.0.0",
     "concurrently": "^8.2.2",
