Rename variable for example

--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,4 @@ DB_PORT = 5432
 DB_USER = postgres
 DB_PASSWORD = 
 DB_NAME = todoapp
-ORIGIN = http://localhost:4173
+VITE_ORIGIN = http://localhost:4173
