--- a/render.yaml
+++ b/render.yaml
@@ -25,4 +25,14 @@ services:
     buildCommand: npm run build
     startCommand: npm run start
     rootDir: server
+  databases:
+  - name: commetto
+    databaseName: commetto
+    user: commetto_user
+    plan: free
+    region: singapore
+    ipAllowList:
+    - source: 0.0.0.0/0
+      description: everywhere
+    postgresMajorVersion: "14"
 version: "1"
