--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "commetto-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "dist/src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm install && npx tsc && npm run migrate-latest && npm run seed-data",
